--- a/src/header.css
+++ b/src/header.css
@@ -27,18 +27,19 @@
   width: 550px;
   height: 30px;
   align-items: center;
-  background-color: rgb(27, 27, 27);
+  background-color: #121212;
   justify-content: center;
   margin: auto;
   color: white;
   padding: 3px 1rem;
   border: none;
   outline: none;
+  font-size: 15px;
 }
 ::placeholder {
   display: flex;
   align-items: center;
-  margin-left: 5px;
+  /* margin-left: 5px;~ */
   color: rgb(100, 100, 100);
   font-size: 17px;
   font-weight: 500;
@@ -55,33 +56,39 @@
 .header_icon2 {
   color: gray;
   margin-left: 0rem;
-  margin-right: 1rem;
-  border: 1px solid gray;
-  padding: 3.5px 10px;
+  /* margin-right: 1rem; */
+  border: 1px solid rgb(46, 45, 45);
+  padding: 3.95px 10px;
   width: 50px !important;
+  background-color: rgb(46, 45, 45);
 }
 .header_icon3 {
   color: white;
-  margin-left: 0.75rem;
+  margin-left: 2px;
   margin-right: 1rem;
-  border: 20px;
-  border-radius: 5px;
+  border: 0.5px solid rgba(0, 0, 0, 0.705);
+  border-radius: 50%;
+  padding: 3.5px;
+  background-color: #202020;
 }
 .header_icon4 {
   color: white;
-  margin-left: 10px;
-  margin-right: 10px;
+  /* padding-left: 15px; */
+  padding-right: 15px;
 }
 .header_icon5 {
   color: white;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .header_icon6 {
   color: white;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .header_avatar {
-  width: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 30px !important;
+  height: 30px !important;
 }
