--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,14 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 .sidebar {
   padding-top: 1.5rem;
-  height: 100vh; /*vh represents the hieght of the screen*/
-  width: 15%;
-  background-color: darkgray;
+  height: 85vh; 
+  width: 18%;
+  background-color: #212121;
+  overflow: hidden !important;
+  /* height: 100%; */
 }
 .sidebar_top {
-  border-bottom: 1px solid black;
+  border-bottom: 0.2px solid gray;
   margin-bottom: 1rem;
-  height: 19%;
+  /* height: 19%; */
+}
+.sidebar_bw {
+  border-bottom: 0.01px solid gray;
+  margin-bottom: 1rem;
+  /* height: 30%; */
 }
 
 .side_home {
@@ -18,8 +25,8 @@
   padding-left: 1.8rem;
 }
 .side_home:hover {
-  background-color: white;
-  width: 100% !important;
+  background-color: #615f5f;
+  /* width: 100% !important; */
   cursor: pointer;
 }
 
@@ -29,8 +36,16 @@
 }
 
 .side_text {
-  color: black;
+  color: white;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
+}
+
+.subscribe {
+  color: gray;
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900 !important;
+  padding-left: 1.8rem;
 }
