--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  background-color: #181818;
+}
+
 .app_row {
   display: flex;
+  padding-left: 17rem;
+  padding-top: 5.5rem;
+  padding-right: 0;
+  width: fit-content;
 }
