--- a/src/header.css
+++ b/src/header.css
@@ -4,6 +4,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 0rem 1rem;
+  position:fixed;
+  width:98vw;
+  z-index:1;
 }
 .header_bw {
   display: flex;
