--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,19 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 .sidebar {
   padding-top: 1.5rem;
-  height: 85vh; 
+  height: 100vh;
+  position: fixed;
+  top: 4.1rem;
+  left: 0;
   width: 18%;
   background-color: #212121;
   overflow: hidden !important;
   /* height: 100%; */
 }
 .sidebar_top {
-  border-bottom: 0.2px solid gray;
+  /* border-bottom: 0.2px solid gray; */
   margin-bottom: 1rem;
   /* height: 19%; */
 }
 .sidebar_bw {
-  border-bottom: 0.01px solid gray;
+  /* border-bottom: 0.01px solid gray; */
   margin-bottom: 1rem;
   /* height: 30%; */
 }
@@ -48,4 +51,10 @@
   font-family: "Roboto", sans-serif;
   font-weight: 900 !important;
   padding-left: 1.8rem;
+}
+.sidebar_divider {
+  height: 1px;
+  border: 0;
+  margin: 10px 0px;
+  background-color: gray;
 }
